--- a/src/components/Configure.mdx
+++ b/src/components/Configure.mdx
@@ -1,19 +1,19 @@
 import { Meta } from "@storybook/blocks";
 
-import Github from "../stories/assets/github.svg";
-import Discord from "../stories/assets/discord.svg";
-import Youtube from "../stories/assets/youtube.svg";
-import Tutorials from "../stories/assets/tutorials.svg";
-import Styling from "../stories/assets/styling.png";
-import Context from "../stories/assets/context.png";
-import Assets from "../stories/assets/assets.png";
-import Docs from "../stories/assets/docs.png";
-import Share from "../stories/assets/share.png";
-import FigmaPlugin from "../stories/assets/figma-plugin.png";
-import Testing from "../stories/assets/testing.png";
-import Accessibility from "../stories/assets/accessibility.png";
-import Theming from "../stories/assets/theming.png";
-import AddonLibrary from "../stories/assets/addon-library.png";
+import Github from "../../stories/assets/github.svg";
+import Discord from "../../stories/assets/discord.svg";
+import Youtube from "../../stories/assets/youtube.svg";
+import Tutorials from "../../stories/assets/tutorials.svg";
+import Styling from "../../stories/assets/styling.png";
+import Context from "../../stories/assets/context.png";
+import Assets from "../../stories/assets/assets.png";
+import Docs from "../../stories/assets/docs.png";
+import Share from "../../stories/assets/share.png";
+import FigmaPlugin from "../../stories/assets/figma-plugin.png";
+import Testing from "../../stories/assets/testing.png";
+import Accessibility from "../../stories/assets/accessibility.png";
+import Theming from "../../stories/assets/theming.png";
+import AddonLibrary from "../../stories/assets/addon-library.png";
 
 export const RightArrow = () => <svg 
     viewBox="0 0 14 14" 
